Running integration tests in Tomcat.
Updated the pom.xml to use Surefire to run integration tests (all
*ServiceTests.java files) during the integration-test phase, and to use
Tomcat to do it.