@@ -21,6 +21,78 @@
 				<artifactId>maven-idea-plugin</artifactId>
 				<version>1.6.1</version>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.14</version>
+				<configuration>
+					<excludes>
+						<exclude>**/*ServiceTests.java</exclude>
+					</excludes>
+
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m -Dsun.net.http.allowRestrictedHeaders=true</argLine>
+				</configuration>
+				<executions>
+					<execution>
+						<id>integration-test</id>
+						<goals>
+							<goal>test</goal>
+						</goals>
+						<phase>integration-test</phase>
+						<configuration>
+							<excludes>
+								<exclude>none</exclude>
+							</excludes>
+							<includes>
+								<include>**/*ServiceTests.java</include>
+							</includes>
+							<argLine>-Xmx1024m -XX:MaxPermSize=256m -Dsun.net.http.allowRestrictedHeaders=true</argLine>
+							<forkCount>1</forkCount>
+							<threadCount>1</threadCount>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.0</version>
+
+				<configuration>
+					<fork>true</fork>
+					<port>8088</port>
+                    <!--
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled export -agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y</argLine>
+                    -->
+                    <contextFile>${basedir}/src/test/tomcatconf/context.xml</contextFile>
+				</configuration>
+
+				<executions>
+					<execution>
+						<id>start-tc</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>run-war-only</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>stop-tc</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>shutdown</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.0.2</version>
+			</plugin>
+
 		</plugins>
 	</build>
 
@@ -63,7 +135,15 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <version>1.9.5</version>
+			<scope>test</scope>
         </dependency>
+
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.2.5</version>
+			<scope>test</scope>
+		</dependency>
 
 		<!-- Lucene -->
 		<dependency>
@@ -143,6 +223,12 @@
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>jasper</artifactId>
 			<version>6.0.37</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.tomcat</groupId>
+					<artifactId>el-api</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
             
 		<!-- Logging -->
